# ucd-hsk-anki-deck

./: .gitignore  README.md  data.json  download_audio_files.py  pyproject.toml
ucdhsk/: main.py
