[tool.poetry]
name = "ucdhsk"
version = "0.1.0"
description = "Bad code to help me learn Chinese"
authors = ["Lucas Tadeu Teixeira <lucas@lucastadeu.com>"]
license = "Public Domain"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pinyin-jyutping = "^0.9"
genanki = "^0.13.1"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
make-deck = "ucdhsk.main:make_deck"
check-images = "ucdhsk.main:check_images"
pinyinfy = "ucdhsk.main:pinyinfy"
download-audio = "ucdhsk.main:download_audio_files"
reset-ids = "ucdhsk.main:reset_ids"
